[package]
name = "svg2pts"
version = "0.1.3"
authors = ["Thomas Dagenais"]
edition = "2018"
readme = "README.md"
keywords = ["svg", "cli", "converter"]
license = "MIT"
description = "A Command line tool to convert a svg to a list of points."
homepage = "https://github.com/exrok/svg2pts"
repository = "https://github.com/exrok/svg2pts"
categories = ["command-line-utilities"]
include = [
    "src/*",
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
usvg = "^0.9"
lyon_geom = { version = "^0.15", default-features = false }
ryu = "^1.0"
kurbo = "^0.5"
