[package]
name = "svg2pts"
version = "0.1.5"
authors = ["Thomas Dagenais"]
edition = "2021"
readme = "README.md"
keywords = ["svg", "cli", "converter"]
license = "MIT"
description = "A Command line tool to convert a svg to a list of points."
homepage = "https://github.com/exrok/svg2pts"
repository = "https://github.com/exrok/svg2pts"
categories = ["command-line-utilities"]
include = [
    "src/*",
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
default = []
text = ["usvg/text"]

[dependencies]
ryu = "^1.0"
usvg = {version = "^0.23", default-features = false}
lyon_geom = { version = "^1.0", default-features = false }
kurbo = "^0.8"

[dev-dependencies]
assert_cmd = "0.12"
predicates = "^1.0"
tempfile = "3"
lazy_static ="^1.4"
